--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
         <!-- RC Version Ok -->
         <jackson.version>2.12.2</jackson.version>
         <jackson.extension.version>2.12.2</jackson.extension.version>
-        <protobuf.version>4.0.0-rc-2</protobuf.version>
+        <protobuf.version>3.15.6</protobuf.version>
 
         <!-- Java Projection Basic Configuration -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -71,7 +71,7 @@
         <stack.version>3.9.6</stack.version>
 
         <jcabi.version>0.22.6</jcabi.version>
-        <jersey.version>2.30.1</jersey.version>
+        <jersey.version>2.33</jersey.version>
         <javax.el.version>3.0.1-b06</javax.el.version>
         <glassfish.el.version>3.0.1-b12</glassfish.el.version>
 
@@ -94,14 +94,14 @@
         <etcd.version>2.18.0</etcd.version>
 
         <!-- Bean Validation -->
-        <hibernate.validator.version>6.1.2.Final</hibernate.validator.version>
+        <hibernate.validator.version>6.2.0.Final</hibernate.validator.version>
 
         <jwt.version>3.14.0</jwt.version>
         <jetbrains.version>20.1.0</jetbrains.version>
         <guice.version>4.1.0</guice.version>
         <scala.version>2.13.5</scala.version>
         <feign.version>8.18.0</feign.version>
-        <guava.version>30.1-jre</guava.version>
+        <guava.version>30.1.1-jre</guava.version>
         <joda.version>2.10.10</joda.version>
         <codehaus.janino.version>3.2.1</codehaus.janino.version>
         <codehaus.mojo.version>1.20</codehaus.mojo.version>
@@ -109,9 +109,11 @@
         <mongodb.async.version>3.12.8</mongodb.async.version>
         <poi.version>4.1.2</poi.version>
         <jedis.version>3.5.2</jedis.version>
+        <j2objc.version>1.3</j2objc.version>
+        <checker.version>3.11.0</checker.version>
 
         <!-- elasticsearch version -->
-        <elasticsearch.version>7.11.2</elasticsearch.version>
+        <elasticsearch.version>7.12.0</elasticsearch.version>
 
         <!-- neo4j search -->
         <neo4j.version>4.2.3</neo4j.version>
@@ -129,7 +131,7 @@
         <http.core.version>4.4.14</http.core.version>
 
         <!-- Liquibase -->
-        <liquibase.version>3.8.9</liquibase.version>
+        <liquibase.version>3.10.3</liquibase.version>
 
         <!-- Rpc -->
         <vertx.grpc.version>1.6.1</vertx.grpc.version>
@@ -145,7 +147,7 @@
         <rxjava2.version>2.2.21</rxjava2.version>
         <netty.tcnative.version>2.0.36.Final</netty.tcnative.version>
         <netty.version>4.1.54.Final</netty.version>
-        <hazelcast.version>3.12.4</hazelcast.version>
+        <hazelcast.version>3.12.12</hazelcast.version>
         <swagger.version>1.6.0</swagger.version>
         <error.prone.version>2.5.1</error.prone.version>
         <reactive.streams.version>1.0.3</reactive.streams.version>
@@ -176,40 +178,40 @@
         <log4j2.version>2.14.1</log4j2.version>
         <logback.version>1.2.3</logback.version>
         <logback.cal10n.version>0.8.1</logback.cal10n.version>
-        <slf4j.version>1.7.25</slf4j.version>
+        <slf4j.version>1.7.30</slf4j.version>
 
         <!-- Plugin -->
-        <maven.plugin.assembly>3.2.0</maven.plugin.assembly>
+        <maven.plugin.assembly>3.3.0</maven.plugin.assembly>
         <maven.plugin.compiler>3.8.1</maven.plugin.compiler>
-        <maven.plugin.surefire>3.0.0-M4</maven.plugin.surefire>
+        <maven.plugin.surefire>3.0.0-M5</maven.plugin.surefire>
         <maven.plugin.clean>3.1.0</maven.plugin.clean>
-        <maven.plugin.version>2.7</maven.plugin.version>
+        <maven.plugin.version>2.8.1</maven.plugin.version>
         <maven.plugin.install>3.0.0-M1</maven.plugin.install>
         <maven.plugin.deploy>3.0.0-M1</maven.plugin.deploy>
         <maven.plugin.jar>3.0.2</maven.plugin.jar>
-        <maven.plugin.resource>3.1.0</maven.plugin.resource>
-        <maven.plugin.site>3.9.0</maven.plugin.site>
+        <maven.plugin.resource>3.2.0</maven.plugin.resource>
+        <maven.plugin.site>3.9.1</maven.plugin.site>
         <maven.plugin.enforcer>3.0.0-M3</maven.plugin.enforcer>
         <maven.plugin.lombok>1.18.18.0</maven.plugin.lombok>
-        <maven.plugin.processor>3.3.3</maven.plugin.processor>
+        <maven.plugin.processor>4.5-jdk8</maven.plugin.processor>
         <maven.plugin.source>3.2.1</maven.plugin.source>
-        <maven.plugin.javadoc>3.1.1</maven.plugin.javadoc>
+        <maven.plugin.javadoc>3.2.0</maven.plugin.javadoc>
         <maven.plugin.staging>1.6.8</maven.plugin.staging>
         <maven.plugin.pgp>1.6</maven.plugin.pgp>
-        <maven.plugin.fabric8>4.4.0</maven.plugin.fabric8>
+        <maven.plugin.fabric8>4.4.1</maven.plugin.fabric8>
         <maven.plugin.coveralls>4.3.0</maven.plugin.coveralls>
         <maven.plugin.cobertura>2.7</maven.plugin.cobertura>
         <maven.plugin.spotify>1.2.2</maven.plugin.spotify>
         <maven.plugin.protobuf>0.6.1</maven.plugin.protobuf>
         <maven.plugin.os>1.5.0.Final</maven.plugin.os>
-        <maven.plugin.antrun>1.8</maven.plugin.antrun>
+        <maven.plugin.antrun>3.0.0</maven.plugin.antrun>
         <maven.plugin.aspectj>1.11</maven.plugin.aspectj>
         <maven.plugin.jcabi>0.14.1</maven.plugin.jcabi>
         <maven.plugin.jar>3.2.0</maven.plugin.jar>
 
     </properties>
     <prerequisites>
-        <maven>3.5.0</maven>
+        <maven>3.6.0</maven>
     </prerequisites>
     <dependencyManagement>
         <dependencies>
@@ -1092,6 +1094,18 @@
                 <artifactId>jedis</artifactId>
                 <version>${jedis.version}</version>
             </dependency>
+            <!-- https://mvnrepository.com/artifact/com.google.j2objc/j2objc-annotations -->
+            <dependency>
+                <groupId>com.google.j2objc</groupId>
+                <artifactId>j2objc-annotations</artifactId>
+                <version>${j2objc.version}</version>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/org.checkerframework/checker-qual -->
+            <dependency>
+                <groupId>org.checkerframework</groupId>
+                <artifactId>checker-qual</artifactId>
+                <version>${checker.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <build>
@@ -1366,6 +1380,9 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>versions-maven-plugin</artifactId>
+                <configuration>
+                    <rulesUri>file://${project.basedir}/pom-update.xml</rulesUri>
+                </configuration>
             </plugin>
         </plugins>
     </build>
