--- a/vertx-gaia/vertx-up/pom.xml
+++ b/vertx-gaia/vertx-up/pom.xml
@@ -43,6 +43,11 @@
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjrt</artifactId>
         </dependency>
+        <!-- Auth Common Framework for different Authorization -->
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-auth-common</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
