--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
         <!-- RC Version Ok -->
         <jackson.version>2.12.2</jackson.version>
         <jackson.extension.version>2.12.2</jackson.extension.version>
-        <protobuf.version>3.11.4</protobuf.version>
+        <protobuf.version>3.15.6</protobuf.version>
 
         <!-- Java Projection Basic Configuration -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -101,14 +101,14 @@
         <guice.version>4.1.0</guice.version>
         <scala.version>2.13.5</scala.version>
         <feign.version>8.18.0</feign.version>
-        <guava.version>25.1-jre</guava.version>
+        <guava.version>30.1.1-jre</guava.version>
         <joda.version>2.10.10</joda.version>
         <codehaus.janino.version>3.1.3</codehaus.janino.version>
         <codehaus.mojo.version>1.20</codehaus.mojo.version>
         <ignite.version>2.10.0</ignite.version>
         <mongodb.async.version>3.12.8</mongodb.async.version>
         <poi.version>4.1.2</poi.version>
-        <jedis.version>3.5.2</jedis.version>
+        <jedis.version>3.6.0-RC1</jedis.version>
         <j2objc.version>1.3</j2objc.version>
         <checker.version>3.11.0</checker.version>
 
@@ -145,11 +145,11 @@
 
         <!-- Vert.x Addition -->
         <rxjava2.version>2.2.21</rxjava2.version>
-        <netty.tcnative.version>2.0.36.Final</netty.tcnative.version>
+        <netty.tcnative.version>2.0.38.Final</netty.tcnative.version>
         <netty.version>4.1.49.Final</netty.version>
         <hazelcast.version>3.12.12</hazelcast.version>
         <swagger.version>1.6.0</swagger.version>
-        <error.prone.version>2.5.1</error.prone.version>
+        <error.prone.version>2.6.0</error.prone.version>
         <reactive.streams.version>1.0.3</reactive.streams.version>
         <zookeeper.version>3.7.0</zookeeper.version>
 
