--- a/vertx-pin/zero-atom/src/main/resources/plugin/sql/database.yml
+++ b/vertx-pin/zero-atom/src/main/resources/plugin/sql/database.yml
@@ -24,3 +24,6 @@ databaseChangeLog:
   - include:
       file: plugin/sql/atom/M_RELATION.sql
       relativeToChangelogFile: false
+  - include:
+      file: plugin/sql/atom/M_TPL.sql
+      relativeToChangelogFile: false
