--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
         <stack.version>3.9.7</stack.version>
 
         <jcabi.version>0.22.6</jcabi.version>
-        <jersey.version>2.33</jersey.version>
+        <jersey.version>2.34</jersey.version>
         <javax.el.version>3.0.1-b06</javax.el.version>
         <glassfish.el.version>3.0.1-b12</glassfish.el.version>
 
@@ -81,7 +81,7 @@
         <vertx.jooq.version>2.4.1</vertx.jooq.version>
         <vertx.jooq.code.version>2.4.1</vertx.jooq.code.version>
         <vertx.jooq.async.version>0.4</vertx.jooq.async.version>
-        <mysql.version>8.0.23</mysql.version>
+        <mysql.version>8.0.24</mysql.version>
 
         <!-- Java Reflection -->
         <reflect.asm.version>1.11.9</reflect.asm.version>
@@ -108,7 +108,7 @@
         <ignite.version>2.10.0</ignite.version>
         <mongodb.async.version>3.12.8</mongodb.async.version>
         <poi.version>4.1.2</poi.version>
-        <jedis.version>3.6.0-RC1</jedis.version>
+        <jedis.version>3.6.0</jedis.version>
         <j2objc.version>1.3</j2objc.version>
         <checker.version>3.12.0</checker.version>
 
