--- a/vertx-gaia/vertx-co/src/main/resources/up/config/vertx-error.yml
+++ b/vertx-gaia/vertx-co/src/main/resources/up/config/vertx-error.yml
@@ -1,6 +1,5 @@
 # Core configuration Error
 E30001: Vert.x zero server config is missing in current data "{0}"
-
 # Configuration validation Error
 E10001: (V) - This rule require all elements of array is JsonObject, Now the index = {0} does not match, it''s {1}
 E10002: (V) - The data object {0} missed required field "{1}"
@@ -255,8 +254,10 @@ E80534: "(417) - (Mod) Data Event operation conflict, single mode could not acce
 E80535: "(417) - (Mod) Sorry, the model that you provide `{0}` contains no primary key"
 E80536: "(417) - (Mod) Sorry, the entityKey = {0} field definition could not be found in {1} ({2})"
 E80537: "(417) - (Mod) Sorry, the entity = {0} definition could not be found in {1}"
-E80538: "(417) - (Mod) Current model: {0} related schema counter {1} or joins number {2} is invalid ( joins >= schema >= 1 )"
+E80538: "(417) - (Mod) Current model：{0} related schema counter {1} or joins number {2} is invalid ( joins >= schema >= 1 )"
 E80539: "(501) - (Web) Current `DictFabric` is null, but it''s required"
 E80540: "(501) - (Web) The model of `DataTpl` is null and could not be found in your environment, Anonymous error"
 E80541: "(409) - (Ref) The model `{0}` defined static references, but found more than one dao in field `{1}`, please check \"sourceReference\" configuration."
 E80544: "(500) - (Ref) Please bind `DataAtom` first and then you can call `bind(Model)` method for this current model ( identifier = `{0}` ). "
+E80545: "(400) - (Mod) Because both new and old record(s) are null/empty, could not be valid to generate history."
+E80546: "(500) - (Excel) Read the excel file met null file issue, please check your code."
