--- a/vertx-istio/zero-iproxy/pom.xml
+++ b/vertx-istio/zero-iproxy/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>vertx-istio</artifactId>
         <groupId>cn.vertxup</groupId>
-        <version>0.7.0-SNAPSHOT</version>
+        <version>0.6.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>zero-iproxy</artifactId>
