--- a/vertx-ifx/zero-ifx-mongo/src/main/resources/up/rules/mongo.yml
+++ b/vertx-ifx/zero-ifx-mongo/src/main/resources/up/rules/mongo.yml
@@ -7,12 +7,12 @@ typed:
   # Single Cluster Settings
   host: STRING
   port: INTEGER
-  // Multiple Cluster Settings
+  # Multiple Cluster Settings
   hosts: JARRAY
   replicaSet: STRING
   serverSelectionTimeoutMS: INTEGER
 
-  // Connection Pool Settings
+  # Connection Pool Settings
   maxPoolSize: INTEGER
   minPoolSize: INTEGER
   maxIdleTimeMS: INTEGER
@@ -22,21 +22,21 @@ typed:
   maintenanceFrequencyMS: INTEGER
   maintenanceInitialDelayMS: INTEGER
 
-  // Credentials / Auth
+  # Credentials / Auth
   username: STRING
   password: STRING
   authSource: STRING
-  // Auth mechanism
+  # Auth mechanism
   authMechanism: STRING
   gssapiServiceName: STRING
 
-  // Socket Settings
+  # Socket Settings
   connectTimeoutMS: INTEGER
   socketTimeoutMS: INTEGER
   sendBufferSize: INTEGER
   receiveBufferSize: INTEGER
   keepAlive: BOOLEAN
 
-  // Heartbeat socket settings
+  # Heartbeat socket settings
   heartbeat.socket: JOBJECT
 
