--- a/vertx-gaia/vertx-co/pom.xml
+++ b/vertx-gaia/vertx-co/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>vertx-co</artifactId>
-    <name>( Vertx Core ) vertx-co: Zero Infrastructure</name>
+    <name>Kernel - Infrastructure「vertx-co」</name>
     <dependencies>
         <!-- Code Gen -->
         <dependency>
