--- a/vertx-gaia/vertx-tp/pom.xml
+++ b/vertx-gaia/vertx-tp/pom.xml
@@ -8,7 +8,7 @@
         <version>0.7.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <name>( Vertx Core ) vertx-tp: Zero Integration</name>
+    <name>Kernel - Integration「vertx-tp」</name>
     <artifactId>vertx-tp</artifactId>
     <dependencies>
         <dependency>
