--- a/vertx-gaia/vertx-up/pom.xml
+++ b/vertx-gaia/vertx-up/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>vertx-up</artifactId>
-    <name>( Vertx Core ) vertx-up: Core Engine</name>
+    <name>Kernel - Web Container「vertx-up」</name>
     <dependencies>
         <!-- Service Discovery -->
         <dependency>
