--- a/vertx-ifx/pom.xml
+++ b/vertx-ifx/pom.xml
@@ -11,18 +11,18 @@
 
     <artifactId>vertx-ifx</artifactId>
     <packaging>pom</packaging>
-    <name>vertx-ifx: Zero Plugins</name>
+    <name>Zero Plugins「vertx-ifx」</name>
     <modules>
         <module>zero-ifx-es</module>
+        <module>zero-ifx-excel</module>
         <module>zero-ifx-feign</module>
         <module>zero-ifx-history</module>
-        <module>zero-ifx-excel</module>
         <module>zero-ifx-iqiy</module>
         <module>zero-ifx-mongo</module>
         <module>zero-ifx-native</module>
+        <module>zero-ifx-neo4j</module>
         <module>zero-ifx-redis</module>
         <module>zero-ifx-sms</module>
-        <module>zero-ifx-neo4j</module>
         <module>zero-ifx-shell</module>
     </modules>
     <dependencies>
