--- a/vertx-ifx/zero-ifx-neo4j/pom.xml
+++ b/vertx-ifx/zero-ifx-neo4j/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>zero-ifx-neo4j</artifactId>
-    <name>( Zero Infix ) Neo4j</name>
+    <name>Infix - Neo4j「zero-ifx-neo4j」</name>
     <dependencies>
         <dependency>
             <groupId>org.neo4j.driver</groupId>
