--- a/vertx-pin/zero-erp/pom.xml
+++ b/vertx-pin/zero-erp/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>zero-erp</artifactId>
-    <name>( Extension ) - Er: Fabric Enterprise Resource</name>
+    <name>Extension: Er - Enterprise Resource「zero-erp」</name>
     <dependencies>
         <!-- Kern -->
         <dependency>
