--- a/vertx-pin/zero-graphic/pom.xml
+++ b/vertx-pin/zero-graphic/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>zero-graphic</artifactId>
-    <name>( Extension ) - Gc: Fabric Graphic</name>
+    <name>Extension: Gc - Graphic Module「zero-graphic」</name>
     <dependencies>
         <!-- Kern -->
         <dependency>
