--- a/vertx-pin/zero-lbs/pom.xml
+++ b/vertx-pin/zero-lbs/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>zero-lbs</artifactId>
-    <name>( Extension ) - Lb: Fabric Location Base</name>
+    <name>Extension: Lb - Location Base「zero-lbs」</name>
     <dependencies>
         <!-- Kern -->
         <dependency>
