--- a/vertx-pin/zero-rbac/pom.xml
+++ b/vertx-pin/zero-rbac/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>zero-rbac</artifactId>
-    <name>( Extension ) - Sc: Fabric RBAC</name>
+    <name>Extension: Sc - Security of RBAC「zero-rbac」</name>
     <dependencies>
         <!-- Kern -->
         <dependency>
