--- a/vertx-import/pom.xml
+++ b/vertx-import/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>vertx-import</artifactId>
     <packaging>pom</packaging>
-    <name>Zero Entrance「vertx-import」</name>
+    <name>「vertx-import」Zero Entrance</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
