--- a/vertx-istio/zero-iproxy/pom.xml
+++ b/vertx-istio/zero-iproxy/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>zero-iproxy</artifactId>
-    <name>Micro - gRPC Module「zero-iproxy」</name>
+    <name>Micro:「zero-iproxy」gRPC Module</name>
     <dependencies>
         <dependency>
             <groupId>cn.vertxup</groupId>
