--- a/vertx-pin/zero-ke/pom.xml
+++ b/vertx-pin/zero-ke/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>zero-ke</artifactId>
-    <name>Extension: Ke - Kernel Engine「zero-ke」</name>
+    <name>Extension:「zero-ke」Ke - Kernel Engine</name>
     <dependencies>
         <dependency>
             <groupId>cn.vertxup</groupId>
