--- a/vertx-pin/zero-quiz/pom.xml
+++ b/vertx-pin/zero-quiz/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>zero-quiz</artifactId>
-    <name>Extension: Ts - Testing Framework「zero-quiz」</name>
+    <name>Extension:「zero-quiz」Ts - Testing Framework</name>
     <dependencies>
         <dependency>
             <groupId>cn.vertxup</groupId>
