--- a/vertx-pin/zero-router/pom.xml
+++ b/vertx-pin/zero-router/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>zero-router</artifactId>
-    <name>Extension: Rt - Micro Api Gateway「zero-router」</name>
+    <name>Extension:「zero-router」Rt - Micro Api Gateway</name>
     <dependencies>
         <!-- Kern -->
         <dependency>
