--- a/vertx-gaia/vertx-co/src/main/resources/up/config/vertx-error.yml
+++ b/vertx-gaia/vertx-co/src/main/resources/up/config/vertx-error.yml
@@ -149,7 +149,7 @@ E60044: "(500) - Your pointer plugin component specification met error, config =
 E60045: "(400) - Your request missed `sigma` field, it means that your request header `X-Sigma` missing, but it's required"
 E60046: "(500) - Could not build valid `URL` for http request, please check your data: integration-request = {0}, data = {1} "
 E60047: "(501) - Sorry, the client that your bind is `null`, could not continue this operation"
-E60048: "(415) The argument type of @PointParam is invalid, valid is ( List<T>, JsonArray ), current is \"{0}\""
+E60048: "(415) The argument type of @PointParam is invalid, valid is ( List<T>, JsonArray, VPosition ), current is \"{0}\""
 E40068: "(411) - When you upload file, the `Content-Length` must be matched, but current is {0}"
 E40069: "(415) - The declared type {0} is not match to MIME {1}"
 
