--- a/vertx-gaia/vertx-co/src/main/resources/up/config/vertx-error.yml
+++ b/vertx-gaia/vertx-co/src/main/resources/up/config/vertx-error.yml
@@ -192,7 +192,8 @@ E80218: "(501) - (Ke) This api is not supported or implemented, please check you
 E80219: "(403) - (Ke) You have no access to create cross `application` account tokens, token generation error, now size = {0}"
 
 E80542: "(409) - (Ke) You want to seek `target` configuration in JOIN, but now the fields ( one of `crud, classDao, classDefine` ) is missing."
-E80543: "(404) - (Ke) You parsed targetIndent = `{0}` in Join workflow, but now get null. data = `{1}`."
+E80543: "(412) - (Ke) You parsed targetIndent = `{0}` in Join workflow, but now get null. data = `{1}`."
+E80544: "(412) - (Ke) You parsed targetIndent = `{0}` in Join workflow with JsonArray, but found more than one identifiers. "
 
 # Ambient Module
 E80300: "(500) - (Ambient) The application environment error, could not get app data"
