--- a/vertx-import/pom.xml
+++ b/vertx-import/pom.xml
@@ -138,7 +138,7 @@
             </dependency>
             <dependency>
                 <groupId>cn.vertxup</groupId>
-                <artifactId>zero-fmd</artifactId>
+                <artifactId>zero-fm</artifactId>
                 <version>${zero.version}</version>
             </dependency>
             <!-- Zero Infix -->
