--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
         <lombok.version>1.18.20</lombok.version>
         <asm.version>9.2</asm.version>
         <cglib.version>3.3.0</cglib.version>
-        <reflection.version>0.9.12</reflection.version>
+        <reflection.version>0.10-RC1</reflection.version>
 
         <!-- Etcd -->
         <etcd.version>2.18.0</etcd.version>
