--- a/pom.xml
+++ b/pom.xml
@@ -67,8 +67,8 @@
         <encoding>UTF-8</encoding>
 
         <!-- Vertx Framework Version -->
-        <vertx.version>4.1.4</vertx.version>
-        <stack.version>4.1.4</stack.version>
+        <vertx.version>3.9.9</vertx.version>
+        <stack.version>3.9.9</stack.version>
 
         <jcabi.version>0.23.2</jcabi.version>
         <jersey.version>2.35</jersey.version>
@@ -77,9 +77,9 @@
 
         <!-- Database Needed -->
         <hikari.cp.version>5.0.0</hikari.cp.version>
-        <jooq.version>3.15.3</jooq.version>
-        <vertx.jooq.version>6.3.0</vertx.jooq.version>
-        <!--        <vertx.jooq.code.version>2.4.1</vertx.jooq.code.version>-->
+        <jooq.version>3.10.8</jooq.version>
+        <vertx.jooq.version>2.4.1</vertx.jooq.version>
+        <vertx.jooq.code.version>2.4.1</vertx.jooq.code.version>
         <vertx.jooq.async.version>0.4</vertx.jooq.async.version>
         <mysql.version>8.0.26</mysql.version>
 
@@ -595,7 +595,7 @@
                 <version>${aspectj.version}</version>
             </dependency>
             <!-- https://mvnrepository.com/artifact/io.github.jklingsporn/vertx-jooq-async-future -->
-            <!--<dependency>
+            <dependency>
                 <groupId>io.github.jklingsporn</groupId>
                 <artifactId>vertx-jooq-async-future</artifactId>
                 <version>${vertx.jooq.async.version}</version>
@@ -609,15 +609,9 @@
                 <groupId>io.github.jklingsporn</groupId>
                 <artifactId>vertx-jooq-async-shared</artifactId>
                 <version>${vertx.jooq.async.version}</version>
-            </dependency>-->
-            <!-- https://mvnrepository.com/artifact/io.github.jklingsporn/vertx-jooq-classic-jdbc -->
-            <dependency>
-                <groupId>io.github.jklingsporn</groupId>
-                <artifactId>vertx-jooq-classic-jdbc</artifactId>
-                <version>${vertx.jooq.version}</version>
             </dependency>
             <!-- http://mvnrepository.com/artifact/io.github.jklingsporn/vertx-jooq-future -->
-            <!--<dependency>
+            <dependency>
                 <groupId>io.github.jklingsporn</groupId>
                 <artifactId>vertx-jooq-shared</artifactId>
                 <version>${vertx.jooq.code.version}</version>
@@ -659,7 +653,7 @@
                         <artifactId>jooq-codegen</artifactId>
                     </exclusion>
                 </exclusions>
-            </dependency>-->
+            </dependency>
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
