--- a/vertx-gaia/vertx-tp/pom.xml
+++ b/vertx-gaia/vertx-tp/pom.xml
@@ -23,7 +23,11 @@
         <!-- JooQ -->
         <dependency>
             <groupId>io.github.jklingsporn</groupId>
-            <artifactId>vertx-jooq-classic-jdbc</artifactId>
+            <artifactId>vertx-jooq-future</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.github.jklingsporn</groupId>
+            <artifactId>vertx-jooq-generate</artifactId>
         </dependency>
         <dependency>
             <groupId>org.jooq</groupId>
