--- a/vertx-istio/zero-iproxy/pom.xml
+++ b/vertx-istio/zero-iproxy/pom.xml
@@ -26,6 +26,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/io.vertx/vertx-grpc-protoc-plugin -->
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-grpc-protoc-plugin</artifactId>
+            <version>${vertx.version}</version>
+        </dependency>
         <!-- Alpn -->
         <dependency>
             <groupId>io.netty</groupId>
@@ -165,6 +171,15 @@
                     <pluginId>grpc-java</pluginId>
                     <pluginArtifact>io.vertx:protoc-gen-grpc-java:${vertx.grpc.version}:exe:${os.detected.classifier}
                     </pluginArtifact>
+                    <protocPlugins>
+                        <protocPlugin>
+                            <id>vertx-grpc-protoc-plugin</id>
+                            <groupId>io.vertx</groupId>
+                            <artifactId>vertx-grpc-protoc-plugin</artifactId>
+                            <version>${stack.version}</version>
+                            <mainClass>io.vertx.grpc.protoc.plugin.VertxGrpcGenerator</mainClass>
+                        </protocPlugin>
+                    </protocPlugins>
                 </configuration>
                 <executions>
                     <execution>
